httpbin-org.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: httpbin.org
spec:
  hosts:
  - httpbin.org
  location: MESH_EXTERNAL
  ports:
  - name: HTTPS
    number: 443
    protocol: TLS
  resolution: DNS

---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: httpbin.org
spec:
  host: httpbin.org
  trafficPolicy:
    tls:
      mode: SIMPLE
      sni: httpbin.org

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin.org
spec:
  gateways:
  - istio-system/cluster-gateway
  - mesh
  hosts:
  - httpbin-org.localhost
  http:
  - name: heap-only
    route:
    - destination:
        host: httpbin.org
        port:
          number: 443
