podinfo.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: demo-podinfo
  name: podinfo
  namespace: default
spec:
  minReadySeconds: 3
  progressDeadlineSeconds: 60
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: podinfo
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        prometheus.io/port: '9797'
        prometheus.io/scrape: 'true'
      labels:
        app: podinfo
    spec:
      containers:
        - command:
            - ./podinfo
            - '--port=9898'
            - '--port-metrics=9797'
            - '--grpc-port=9999'
            - '--grpc-service-name=podinfo'
            - '--level=info'
            - '--random-delay=false'
            - '--random-error=false'
          image: 'ghcr.io/stefanprodan/podinfo:6.3.0'
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - podcli
                - check
                - http
                - 'localhost:9898/healthz'
            initialDelaySeconds: 5
            timeoutSeconds: 5
          name: podinfod
          ports:
            - containerPort: 9898
              name: http
              protocol: TCP
            - containerPort: 9797
              name: http-metrics
              protocol: TCP
            - containerPort: 9999
              name: grpc
              protocol: TCP
          readinessProbe:
            exec:
              command:
                - podcli
                - check
                - http
                - 'localhost:9898/readyz'
            initialDelaySeconds: 5
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 2000m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 64Mi

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: demo-podinfo
  name: podinfo
  namespace: default
spec:
  ports:
    - name: http
      port: 9898
      protocol: TCP
      targetPort: http
    - name: grpc
      port: 9999
      protocol: TCP
      targetPort: grpc
  selector:
    app: podinfo
  type: ClusterIP

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: podinfo
spec:
  gateways:
  - istio-system/cluster-gateway
  - mesh
  hosts:
  - podinfo.localhost
  http:
  - name: podinfo
    route:
    - destination:
        host: podinfo
        port:
          number: 9898
